# Procesamiento-Distribuido-de-Datos

./: README.md  config  deploy_cluster.sh
Practica1_memoria_compartida/: CMakeLists.txt
Practica1_memoria_compartida/computeDistributed/: CMakeLists.txt  main.cpp
Practica1_memoria_compartida/computeShared/: CMakeLists.txt  main.cpp
Practica1_memoria_compartida/libDomain/: CMakeLists.txt
Practica1_memoria_compartida/libDomain/include/libDomain/: CSVLoader.h  Compute.h
Practica1_memoria_compartida/libDomain/include/libDomain/data/: Names.h
Practica1_memoria_compartida/libDomain/src/: Compute.cpp
Practica1_memoria_compartida/release/: CMakeCache.txt  Makefile  cmake_install.cmake
Practica1_memoria_compartida/release/computeShared/: Makefile  cmake_install.cmake  computeShared
Practica1_memoria_compartida/release/libDomain/: Makefile  cmake_install.cmake
